# cpp-micrograd

./: CMakeLists.txt
include/micrograd/: layer.hpp  mlp.hpp  neuron.hpp  value.hpp
src/: layer.cpp  mlp.cpp  neuron.cpp  value.cpp
tests/: test_nn.cpp  test_value.cpp
